--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
-    // Color Theme
+    Overall Theme
     <color name="colorPrimaryDark">#360046</color>  // First Top Color
     <color name="colorPrimary">#B0960064</color>      // Second Top Color
 
+    ??
     <color name="colorAccent">#FF4081</color>
+
+    Basic Colors
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 
     Button Colors
     <color name="Welcome_Button">#D81B60</color>
